# dvc-viewer

./: .cluster-ci  .gitignore  README.md  dvc-viewer-test.sh  dvc.yaml  exemple-dvc.yaml  fake_output.txt  inspiration.py  install.sh  patch_cli.py  pyproject.toml  run_discovery.py  run_dvc.py  test_gdrive.py  verify_foreach.py  verify_propagation.py
.agent/workflows/: architect.md  handover.md  janitor.md
.cursor/commands/: architect.md  handover.md  janitor.md
.github/workflows/: cluster-ci.yml  test-gdrive.yml
docs/: index_hashing.md  index_tasks.md
docs/hashing/: portability.md
docs/tasks/: ast-hashing-optimization.md  fix-rwlock-corruption.md  fix_gitignore_invalidation.md
dvc_viewer/: __init__.py  cli.py  dvc_client.py  dvc_client.py.orig  gdrive.py  hasher.py  parser.py  server.py  updater.py  utils.py
dvc_viewer/static/: index.html
scripts/: setup_gdrive_auth.py  verify_gdrive.py  verify_gdrive_sync.py
tests/: test_ast_hashing.py  test_gdrive.py  test_gdrive_ci.py  test_hooks.py  test_invalidation_diagnostic.py  test_parser.py  test_safe_resolve.py
tests/fixtures/complex_foreach/: dvc.yaml  train.py
tests/fixtures/default/: dvc.yaml  evaluate.py
tests/fixtures/default/config/: params.yaml
